--- a/checkvite/static/help.html
+++ b/checkvite/static/help.html
@@ -11,18 +11,18 @@
     alt text provided by a human (“Human”) and text provided by another model
     (“Baseline”). 
   </p>
-
   <p>
-    The “Baseline” model is <a href="https://huggingface.co/nlpconnect/vit-gpt2-image-captioning">nlpconnect/vit-gpt2-image-captioning</a> which is slighly bigger than ours.
+    The “Baseline” model is <a href="https://huggingface.co/nlpconnect/vit-gpt2-image-captioning">nlpconnect/vit-gpt2-image-captioning</a> which is slighly bigger than ours and trained on biased data.
   </p> 
   <p>
     The “Human” description is pulled from the source of the image. (Pexels, Flickr, etc.) and is not always there or good. It's just added as an indication.  
   </p> 
- 
+  <p>You can click on the wand to generate the text for our model or the baseline model to compare them.<p>
+   
   <p>
     If the “Firefox” alt text fits our defined criteria for
     "Acceptable" (see below), click "Accept" without filling out any other
-    fields. Click on the wand to generate the text. If it fits the criteria
+    fields. If it fits the criteria
     below for “Unacceptable,” write an improved alt text description, select all
     applicable reasons for rejection, and then click Reject & Retrain.
   </p>
