--- a/checkvite/static/stats.html
+++ b/checkvite/static/stats.html
@@ -1,22 +1,29 @@
-<div class="card" style="margin-top: 15px; margin-bottom: 15px">
-  <header>
-    <h3>Training Stats</h3>
-  </header>
-  <div class="progress-bar">
-    <div class="segment accurate" data-tooltip="Acceptable" style="width: 30%">
-      30%
-    </div>
-    <div class="segment biased" data-tooltip="Inacceptable" style="width: 20%">
-      20%
-    </div>
-    <div
-      class="segment not-checked"
-      data-tooltip="Not checked yet"
-      style="width: 50%"
-    >
-      50%
+<div class="row">
+  <div class=".col-6">
+    <div class="card" style="margin-top: 15px; margin-bottom: 15px">
+      <header>
+        <h4>Global stats</h4>
+      </header>
+
+      <div class="chart-container">
+        <canvas id="overallProgressChart"></canvas>
+      </div>
     </div>
   </div>
+
+  <div class=".col-6" id="user-progress">
+    <div class="card" style="margin-top: 15px; margin-bottom: 15px">
+      <header>
+        <h4>Your stats</h4>
+      </header>
+      <div class="chart-container">
+        <canvas id="userProgressChart"></canvas>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div>
   <h3>Add a new image</h3>
   <form action="/upload" method="post" enctype="multipart/form-data">
     <label for="image">Image:</label>
