added acceptance rate

--- a/checkvite/static/stats.html
+++ b/checkvite/static/stats.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class=".col-4">
+  <div class=".col-3">
     <header>
       <h4>Global stats</h4>
     </header>
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <div class=".col-4" id="user-progress">
+  <div class=".col-3" id="user-progress">
     <header>
       <h4>Your stats</h4>
     </header>
@@ -17,11 +17,18 @@
     </div>
   </div>
 
-  <div class=".col-4">
+  <div class=".col-3">
     <header>
       <h4>Rejection reasons</h4>
     </header>
     <div id="rejectionStats" style="width: 100%"></div>
+  </div>
+
+  <div class=".col-3">
+    <header>
+      <h4>Acceptance Rate</h4>
+    </header>
+    <div id="acceptanceRate" style="width: 100%"></div>
   </div>
 </div>
 
