--- a/checkvite/static/stats.html
+++ b/checkvite/static/stats.html
@@ -1,18 +1,20 @@
 <div class="row">
   <div class=".col-3">
     <header>
-      <h4>Global stats</h4>
+      <h3>Global stats</h3>
     </header>
     <div class="chart-container">
+      <p id="numberOfImages">Total: 0</p>
       <canvas id="overallProgressChart"></canvas>
     </div>
   </div>
 
   <div class=".col-3" id="user-progress">
     <header>
-      <h4>Your stats</h4>
+      <h3>Your stats</h3>
     </header>
     <div class="chart-container">
+      <p id="numberOfUserImages">Total: 0</p>
       <canvas id="userProgressChart"></canvas>
     </div>
   </div>
