--- a/checkvite/static/help.html
+++ b/checkvite/static/help.html
@@ -21,8 +21,11 @@
    
   <p>
     If the “Firefox” alt text fits our defined criteria for
-    "Acceptable" (see below), you should still provide edits in the “improved alt text” text box to correct minor issues, and this data will be used for the next round of training. After filling out the “improved alt text” field (if necessary), click “Accept”.</p>
-<p></p>If it fits the criteria
+    "Acceptable" (see below), you should still provide edits in the “improved alt text” text box to correct minor issues, and this data will be used for the next round of training. After filling out the “improved alt text” field (if necessary), click “Accept”.
+  </p>
+  
+<p>
+  If it fits the criteria
     below for “Unacceptable,” write an improved alt text description, select all
     applicable reasons for rejection, and then click Reject & Retrain.
   </p>
